--- a/process_book.ipynb
+++ b/process_book.ipynb
@@ -108,7 +108,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -365,57 +365,14 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "However, the names of some of the different awards have changed over the years; in particular, the following are the ones with the problems:"
+      "However, the names of some of the different awards have changed over the years; we had better fix this for consistency later on.  "
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "oscars['2006'].keys()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 31,
-       "text": [
-        "[u'Best Actor in a Supporting Role',\n",
-        " u'Best Documentary, Features',\n",
-        " u'Best Writing, Screenplay Written Directly for the Screen',\n",
-        " u'Best Foreign Language Film',\n",
-        " u'Best Film Editing',\n",
-        " u'Best Art Direction',\n",
-        " u'Best Short Film, Live Action',\n",
-        " u'Best Music, Original Song',\n",
-        " u'Best Music, Original Score',\n",
-        " u'Best Short Film, Animated',\n",
-        " u'Best Makeup',\n",
-        " u'Best Costume Design',\n",
-        " u'Best Writing, Screenplay Based on Material from Another Medium',\n",
-        " u'Best Sound Editing',\n",
-        " u'Best Actress in a Supporting Role',\n",
-        " u'Best Cinematography',\n",
-        " u'Best Documentary, Short Subjects',\n",
-        " u'Best Sound',\n",
-        " u'Best Director',\n",
-        " u'Best Actor in a Leading Role',\n",
-        " u'Best Picture',\n",
-        " u'Best Actress in a Leading Role',\n",
-        " u'Best Effects, Visual Effects',\n",
-        " u'Best Animated Feature Film of the Year']"
-       ]
-      }
-     ],
-     "prompt_number": 31
     },
     {
      "cell_type": "code",
@@ -431,67 +388,21 @@
       "\n",
       "# http://stackoverflow.com/questions/9708374/python-how-to-find-the-string-with-most-matches-in-a-list-of-strings\n",
       "def find_correct_award(awards,keystr):\n",
-      "    keywords = keystr.split(' ')\n",
+      "    keywords = re.split(' |-',keystr.lower())\n",
       "    def matches(text):\n",
       "        return sum(word in text.lower() for word in keywords)\n",
-      "    return max(awards,key=matches)\n",
-      "        \n",
-      "names = {}  \n",
+      "    return max(awards,key=matches) \n",
       "\n",
       "for year in oscars:\n",
       "    for award in movie_awards:\n",
       "        if award not in oscars[year].keys():\n",
-      "            print award,year\n",
-      "            print find_correct_award(oscars[year].keys(),award),'\\n'\n",
-      "            break\n",
-      "            if award not in names.keys():\n",
-      "                names[award] = [year]\n",
-      "            else:\n",
-      "                names[award].append(year)\n",
-      "print names"
+      "            old = find_correct_award(oscars[year].keys(),award)\n",
+      "            oscars[year][award] = oscars[year].pop(old)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Best Art Direction-Set Decoration 2006\n",
-        "Best Actor in a Supporting Role \n",
-        "\n",
-        "Best Art Direction-Set Decoration 2007\n",
-        "Best Actor in a Supporting Role \n",
-        "\n",
-        "Best Sound 2004\n",
-        "Best Actor in a Supporting Role \n",
-        "\n",
-        "Best Art Direction-Set Decoration 2005\n",
-        "Best Actor in a Supporting Role \n",
-        "\n",
-        "Best Art Direction-Set Decoration 2008\n",
-        "Best Actor in a Supporting Role \n",
-        "\n",
-        "Best Art Direction-Set Decoration 2009\n",
-        "Best Actor in a Supporting Role \n",
-        "\n",
-        "Best Art Direction-Set Decoration 2011\n",
-        "Best Actor in a Supporting Role \n",
-        "\n",
-        "Best Art Direction-Set Decoration 2010\n",
-        "Best Actor in a Supporting Role \n",
-        "\n",
-        "Best Art Direction-Set Decoration 2013\n",
-        "Best Actor in a Supporting Role \n",
-        "\n",
-        "Best Art Direction-Set Decoration 2012\n",
-        "Best Actor in a Supporting Role \n",
-        "\n",
-        "{}\n"
-       ]
-      }
-     ],
-     "prompt_number": 30
+     "outputs": [],
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -1620,7 +1531,67 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "From this histogram, it appears we have an almost bi-modal distribution where the highest frequency averages are at the polar ends.  Considering that a user would be more likely to write a review for a movie if s/he absolutely hated or loved it, this isn't that surprising because then they too would rate it at the extremes.  "
+      "From this histogram, it appears we have an almost bi-modal distribution where the highest frequency averages are at the polar ends.  Considering that a user would be more likely to write a review for a movie if s/he absolutely hated or loved it, this isn't that surprising because then they too would rate it at the extremes.  \n",
+      "<hr/>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Lastly, before we begin out statistical analysis, we must only include reviews that are written in the time *before* the movie was considered for an oscar, else our data would be unnecesarily skewed because after an award does (or does not) win an award, critics may be more inclined to give it a certain review type.  In this way, we try to eliminate this particular type of bias here."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# first let's convert the date column to an actual date object\n",
+      "imdb_df['date'] = pd.to_datetime(imdb_df['date'])\n",
+      "def less_than_date(row):\n",
+      "    return row['date'] < pd.to_datetime('January 1 ' + str(row['year'] + 1))\n",
+      "imdb_df = imdb_df[imdb_df.apply(less_than_date,axis=1)]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 28
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print \"Number of reviews: %i\" % len(imdb_df)\n",
+      "print \"Number of critics: %i\" % imdb_df.critic.unique().size\n",
+      "print \"Number of movies:  %i\" % imdb_df.title.unique().size"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Number of reviews: 242533\n",
+        "Number of critics: 130504"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Number of movies:  1852\n"
+       ]
+      }
+     ],
+     "prompt_number": 29
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "As we can see, this filter reduced the number of reviews almost by half, but we also lost some movies."
      ]
     },
     {
@@ -1640,52 +1611,43 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "oscars['2006'].keys()"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 12,
-       "text": [
-        "[u'Best Actor in a Supporting Role',\n",
-        " u'Best Documentary, Features',\n",
-        " u'Best Writing, Screenplay Written Directly for the Screen',\n",
-        " u'Best Foreign Language Film',\n",
-        " u'Best Film Editing',\n",
-        " u'Best Art Direction',\n",
-        " u'Best Short Film, Live Action',\n",
-        " u'Best Music, Original Song',\n",
-        " u'Best Music, Original Score',\n",
-        " u'Best Short Film, Animated',\n",
-        " u'Best Makeup',\n",
-        " u'Best Costume Design',\n",
-        " u'Best Writing, Screenplay Based on Material from Another Medium',\n",
-        " u'Best Sound Editing',\n",
-        " u'Best Actress in a Supporting Role',\n",
-        " u'Best Cinematography',\n",
-        " u'Best Documentary, Short Subjects',\n",
-        " u'Best Sound',\n",
-        " u'Best Director',\n",
-        " u'Best Actor in a Leading Role',\n",
-        " u'Best Picture',\n",
-        " u'Best Actress in a Leading Role',\n",
-        " u'Best Effects, Visual Effects',\n",
-        " u'Best Animated Feature Film of the Year']"
-       ]
-      }
-     ],
-     "prompt_number": 12
+     "source": [
+      "Because we store the imdb ids as strings in the oscars dataframe, we need to make sure we have a \n",
+      "consistent representation in the imdb review dataframe.  Because we read in from a csv, pandas\n",
+      "automatically turns the ids into ints, so we have to do the editting here."
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "imdb_df['id'] = imdb_df['id'].map(lambda id: str(id).zfill(7))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# now it's time to add the data\n",
+      "\"\"\"\n",
+      "Function\n",
+      "--------\n",
+      "add_oscar_data:\n",
+      "    Adds data for being an oscar winner or nominee in place in the passed dataframe\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "    df: Dataframe\n",
+      "    award_name: Name of the oscar award\n",
+      "        If None, then creates general columns for winning any or being nominated in any\n",
+      "\"\"\"\n",
+      "\n",
       "movie_awards = [u'Best Documentary, Features',u'Best Writing, Screenplay Written Directly for the Screen',\n",
       "                u'Best Foreign Language Film',u'Best Short Film, Live Action',u'Best Music, Original Song',\n",
       "                u'Best Music, Original Score',u'Best Art Direction-Set Decoration',u'Best Costume Design',\n",
@@ -1694,290 +1656,55 @@
       "                u'Best Cinematography',u'Best Documentary, Short Subjects',u'Best Sound',u'Best Director',\n",
       "                u'Best Picture',u'Best Visual Effects']\n",
       "\n",
-      "imdb_df['oscar_winner'] = 0\n",
-      "imdb_df['oscar_nom'] = 0\n",
-      "# iterate through dictionary and add\n",
-      "for year in oscars:\n",
-      "    for award in movie_awards:\n",
-      "        try:\n",
-      "            imdb_df[imdb_df.id == int(oscars[year][award]['winner'][1])].oscar_winner = 1\n",
-      "            imdb_df[imdb_df.id == int(oscars[year][award]['winner'][1])].oscar_nom = 1\n",
-      "            for nom in oscars[year][award]['nominees']:\n",
-      "                imdb_df[imdb_df.id == int(nom[1])].pscar_nom = 1\n",
-      "        except:\n",
-      "            print year,award"
+      "def add_oscar_data(df,award_name=None):\n",
+      "    awards = movie_awards\n",
+      "    if award_name:\n",
+      "        awards = [award_name]\n",
+      "        win = award_name.replace(' ','_') + '_winner'\n",
+      "        nom = award_name.replace(' ','_') + '_nom'\n",
+      "    else:\n",
+      "        win = 'oscar_winner'\n",
+      "        nom = 'oscar_nom'\n",
+      "    df[win] = 0\n",
+      "    df[nom] = 0\n",
+      "    for year in oscars:\n",
+      "        for award in movie_awards:\n",
+      "            try:\n",
+      "                df[df.id == int(oscars[year][award]['winner'][1])][win] = 1\n",
+      "                df[df.id == int(oscars[year][award]['winner'][1])][nom] = 1\n",
+      "                for nom in oscars[year][award]['nominees']:\n",
+      "                    df[df.id == int(nom[1])][win] = 1\n",
+      "            # skip awards that don't exist for a year\n",
+      "            except:\n",
+      "                pass"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "2006 Best Art Direction-Set Decoration\n",
-        "2006"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Animated Feature\n",
-        "2006"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Visual Effects\n",
-        "2007"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Art Direction-Set Decoration\n",
-        "2007"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Animated Feature\n",
-        "2007"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Visual Effects\n",
-        "2004"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Sound\n",
-        "2005"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Art Direction-Set Decoration\n",
-        "2005"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Animated Feature\n",
-        "2005"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Visual Effects\n",
-        "2008"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Art Direction-Set Decoration\n",
-        "2008"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Animated Feature\n",
-        "2008"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Visual Effects\n",
-        "2009"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Art Direction-Set Decoration\n",
-        "2009"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Animated Feature\n",
-        "2009"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Documentary, Short Subjects\n",
-        "2009"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Visual Effects\n",
-        "2011"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Art Direction-Set Decoration\n",
-        "2011"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Animated Feature\n",
-        "2011"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Visual Effects\n",
-        "2010"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Art Direction-Set Decoration\n",
-        "2010"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Animated Feature\n",
-        "2010"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Visual Effects\n",
-        "2013"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Art Direction-Set Decoration\n",
-        "2013"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Visual Effects\n",
-        "2012"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Art Direction-Set Decoration\n",
-        "2012"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Animated Feature\n",
-        "2012"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Best Visual Effects\n"
-       ]
-      }
-     ],
-     "prompt_number": 13
+     "outputs": [],
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "oscars['2006'].keys()"
+      "add_oscar_data(imdb_df)\n",
+      "imdb_df.head()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 14,
-       "text": [
-        "[u'Best Actor in a Supporting Role',\n",
-        " u'Best Documentary, Features',\n",
-        " u'Best Writing, Screenplay Written Directly for the Screen',\n",
-        " u'Best Foreign Language Film',\n",
-        " u'Best Film Editing',\n",
-        " u'Best Art Direction',\n",
-        " u'Best Short Film, Live Action',\n",
-        " u'Best Music, Original Song',\n",
-        " u'Best Music, Original Score',\n",
-        " u'Best Short Film, Animated',\n",
-        " u'Best Makeup',\n",
-        " u'Best Costume Design',\n",
-        " u'Best Writing, Screenplay Based on Material from Another Medium',\n",
-        " u'Best Sound Editing',\n",
-        " u'Best Actress in a Supporting Role',\n",
-        " u'Best Cinematography',\n",
-        " u'Best Documentary, Short Subjects',\n",
-        " u'Best Sound',\n",
-        " u'Best Director',\n",
-        " u'Best Actor in a Leading Role',\n",
-        " u'Best Picture',\n",
-        " u'Best Actress in a Leading Role',\n",
-        " u'Best Effects, Visual Effects',\n",
-        " u'Best Animated Feature Film of the Year']"
+       "ename": "NameError",
+       "evalue": "name 'add_oscar_data' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-3-8d5b3b2bb67e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0madd_oscar_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimdb_df\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mimdb_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mNameError\u001b[0m: name 'add_oscar_data' is not defined"
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
