--- a/process_book.ipynb
+++ b/process_book.ipynb
@@ -365,7 +365,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -402,7 +402,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -421,7 +421,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -1079,7 +1079,7 @@
       "        gc.collect()\n",
       "        \n",
       "filter_quotes(imdb_df)\n",
-      "imdb_df.to_csv('data/imdb_reviews.csv')\n",
+      "imdb_df.to_csv('data/imdb_reviews.csv',index=False)\n",
       "\"\"\"\n",
       "pass"
      ],
@@ -1106,7 +1106,6 @@
         "  <thead>\n",
         "    <tr style=\"text-align: right;\">\n",
         "      <th></th>\n",
-        "      <th>Unnamed: 0</th>\n",
         "      <th>critic</th>\n",
         "      <th>date</th>\n",
         "      <th>id</th>\n",
@@ -1121,7 +1120,6 @@
         "  <tbody>\n",
         "    <tr>\n",
         "      <th>0</th>\n",
-        "      <td> 0</td>\n",
         "      <td>                       GuyCC</td>\n",
         "      <td> 17 December 2003</td>\n",
         "      <td> 167260</td>\n",
@@ -1134,7 +1132,6 @@
         "    </tr>\n",
         "    <tr>\n",
         "      <th>1</th>\n",
-        "      <td> 1</td>\n",
         "      <td>  (muffinking66@hotmail.com)</td>\n",
         "      <td> 16 December 2003</td>\n",
         "      <td> 167260</td>\n",
@@ -1147,7 +1144,6 @@
         "    </tr>\n",
         "    <tr>\n",
         "      <th>2</th>\n",
-        "      <td> 2</td>\n",
         "      <td>             James Hitchcock</td>\n",
         "      <td>  4 February 2004</td>\n",
         "      <td> 167260</td>\n",
@@ -1160,7 +1156,6 @@
         "    </tr>\n",
         "    <tr>\n",
         "      <th>3</th>\n",
-        "      <td> 3</td>\n",
         "      <td>                     eiratan</td>\n",
         "      <td> 17 December 2003</td>\n",
         "      <td> 167260</td>\n",
@@ -1173,7 +1168,6 @@
         "    </tr>\n",
         "    <tr>\n",
         "      <th>4</th>\n",
-        "      <td> 4</td>\n",
         "      <td>                    Derek237</td>\n",
         "      <td>    16 March 2005</td>\n",
         "      <td> 167260</td>\n",
@@ -1190,18 +1184,18 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 2,
+       "prompt_number": 9,
        "text": [
-        "   Unnamed: 0                       critic              date      id  norm_score  overall_score                                              quote source                                          title  year\n",
-        "0           0                        GuyCC  17 December 2003  167260           1           0.89  Peter Jackson has done it.  He has created an ...   IMDB  The Lord of the Rings: The Return of the King  2003\n",
-        "1           1   (muffinking66@hotmail.com)  16 December 2003  167260           1           0.89  Saying that this film starts where `Two Towers...   IMDB  The Lord of the Rings: The Return of the King  2003\n",
-        "2           2              James Hitchcock   4 February 2004  167260           1           0.89  I am, I admit, an unlikely convert to the reli...   IMDB  The Lord of the Rings: The Return of the King  2003\n",
-        "3           3                      eiratan  17 December 2003  167260           1           0.89  As a movie watcher, I tend to become bored wit...   IMDB  The Lord of the Rings: The Return of the King  2003\n",
-        "4           4                     Derek237     16 March 2005  167260           1           0.89  Obviously, I'm aware of the fact that the Lord...   IMDB  The Lord of the Rings: The Return of the King  2003"
+        "                        critic              date      id  norm_score  overall_score                                              quote source                                          title  year\n",
+        "0                        GuyCC  17 December 2003  167260           1           0.89  Peter Jackson has done it.  He has created an ...   IMDB  The Lord of the Rings: The Return of the King  2003\n",
+        "1   (muffinking66@hotmail.com)  16 December 2003  167260           1           0.89  Saying that this film starts where `Two Towers...   IMDB  The Lord of the Rings: The Return of the King  2003\n",
+        "2              James Hitchcock   4 February 2004  167260           1           0.89  I am, I admit, an unlikely convert to the reli...   IMDB  The Lord of the Rings: The Return of the King  2003\n",
+        "3                      eiratan  17 December 2003  167260           1           0.89  As a movie watcher, I tend to become bored wit...   IMDB  The Lord of the Rings: The Return of the King  2003\n",
+        "4                     Derek237     16 March 2005  167260           1           0.89  Obviously, I'm aware of the fact that the Lord...   IMDB  The Lord of the Rings: The Return of the King  2003"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -1539,7 +1533,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 28
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -1569,7 +1563,7 @@
        ]
       }
      ],
-     "prompt_number": 29
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -1612,7 +1606,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -1654,10 +1648,10 @@
       "    for year in oscars:\n",
       "        for award in movie_awards:\n",
       "            try:\n",
-      "                df[df.id == int(oscars[year][award]['winner'][1])][win] = 1\n",
-      "                df[df.id == int(oscars[year][award]['winner'][1])][nom] = 1\n",
-      "                for nom in oscars[year][award]['nominees']:\n",
-      "                    df[df.id == int(nom[1])][win] = 1\n",
+      "                df[win][df.id == oscars[year][award]['winner'][1]] = 1\n",
+      "                df[nom][df.id == oscars[year][award]['winner'][1]] = 1\n",
+      "                for n in oscars[year][award]['nominees']:\n",
+      "                    df[nom][df.id == n[1]] = 1\n",
       "            # skip awards that don't exist for a year\n",
       "            except:\n",
       "                pass"
@@ -1665,7 +1659,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 47
     },
     {
      "cell_type": "code",
@@ -1678,17 +1672,114 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "NameError",
-       "evalue": "name 'add_oscar_data' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-3-8d5b3b2bb67e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0madd_oscar_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimdb_df\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mimdb_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mNameError\u001b[0m: name 'add_oscar_data' is not defined"
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>critic</th>\n",
+        "      <th>date</th>\n",
+        "      <th>id</th>\n",
+        "      <th>norm_score</th>\n",
+        "      <th>overall_score</th>\n",
+        "      <th>quote</th>\n",
+        "      <th>source</th>\n",
+        "      <th>title</th>\n",
+        "      <th>year</th>\n",
+        "      <th>oscar_winner</th>\n",
+        "      <th>oscar_nom</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>0</th>\n",
+        "      <td>                       GuyCC</td>\n",
+        "      <td>2003-12-17 00:00:00</td>\n",
+        "      <td> 0167260</td>\n",
+        "      <td> 1.0</td>\n",
+        "      <td> 0.89</td>\n",
+        "      <td> Peter Jackson has done it.  He has created an ...</td>\n",
+        "      <td> IMDB</td>\n",
+        "      <td> The Lord of the Rings: The Return of the King</td>\n",
+        "      <td> 2003</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>1</th>\n",
+        "      <td>  (muffinking66@hotmail.com)</td>\n",
+        "      <td>2003-12-16 00:00:00</td>\n",
+        "      <td> 0167260</td>\n",
+        "      <td> 1.0</td>\n",
+        "      <td> 0.89</td>\n",
+        "      <td> Saying that this film starts where `Two Towers...</td>\n",
+        "      <td> IMDB</td>\n",
+        "      <td> The Lord of the Rings: The Return of the King</td>\n",
+        "      <td> 2003</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>3</th>\n",
+        "      <td>                     eiratan</td>\n",
+        "      <td>2003-12-17 00:00:00</td>\n",
+        "      <td> 0167260</td>\n",
+        "      <td> 1.0</td>\n",
+        "      <td> 0.89</td>\n",
+        "      <td> As a movie watcher, I tend to become bored wit...</td>\n",
+        "      <td> IMDB</td>\n",
+        "      <td> The Lord of the Rings: The Return of the King</td>\n",
+        "      <td> 2003</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>5</th>\n",
+        "      <td>                Chris_Docker</td>\n",
+        "      <td>2003-12-17 00:00:00</td>\n",
+        "      <td> 0167260</td>\n",
+        "      <td> 0.9</td>\n",
+        "      <td> 0.89</td>\n",
+        "      <td> Feeling weary and battle-worn, I have just sta...</td>\n",
+        "      <td> IMDB</td>\n",
+        "      <td> The Lord of the Rings: The Return of the King</td>\n",
+        "      <td> 2003</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>6</th>\n",
+        "      <td>                   eviltimmy</td>\n",
+        "      <td>2003-12-20 00:00:00</td>\n",
+        "      <td> 0167260</td>\n",
+        "      <td> 1.0</td>\n",
+        "      <td> 0.89</td>\n",
+        "      <td> This is the final movie in the Lord of the Rin...</td>\n",
+        "      <td> IMDB</td>\n",
+        "      <td> The Lord of the Rings: The Return of the King</td>\n",
+        "      <td> 2003</td>\n",
+        "      <td> 1</td>\n",
+        "      <td> 1</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 48,
+       "text": [
+        "                        critic                date       id  norm_score  overall_score                                              quote source                                          title  year  oscar_winner  oscar_nom\n",
+        "0                        GuyCC 2003-12-17 00:00:00  0167260         1.0           0.89  Peter Jackson has done it.  He has created an ...   IMDB  The Lord of the Rings: The Return of the King  2003             1          1\n",
+        "1   (muffinking66@hotmail.com) 2003-12-16 00:00:00  0167260         1.0           0.89  Saying that this film starts where `Two Towers...   IMDB  The Lord of the Rings: The Return of the King  2003             1          1\n",
+        "3                      eiratan 2003-12-17 00:00:00  0167260         1.0           0.89  As a movie watcher, I tend to become bored wit...   IMDB  The Lord of the Rings: The Return of the King  2003             1          1\n",
+        "5                 Chris_Docker 2003-12-17 00:00:00  0167260         0.9           0.89  Feeling weary and battle-worn, I have just sta...   IMDB  The Lord of the Rings: The Return of the King  2003             1          1\n",
+        "6                    eviltimmy 2003-12-20 00:00:00  0167260         1.0           0.89  This is the final movie in the Lord of the Rin...   IMDB  The Lord of the Rings: The Return of the King  2003             1          1"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 48
     },
     {
      "cell_type": "markdown",
