--- a/process_book.ipynb
+++ b/process_book.ipynb
@@ -345,7 +345,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -1184,7 +1184,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 9,
+       "prompt_number": 5,
        "text": [
         "                        critic              date      id  norm_score  overall_score                                              quote source                                          title  year\n",
         "0                        GuyCC  17 December 2003  167260           1           0.89  Peter Jackson has done it.  He has created an ...   IMDB  The Lord of the Rings: The Return of the King  2003\n",
@@ -1195,7 +1195,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -1533,7 +1533,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -1563,7 +1563,7 @@
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -1606,7 +1606,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -1659,7 +1659,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 47
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -1768,7 +1768,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 48,
+       "prompt_number": 9,
        "text": [
         "                        critic                date       id  norm_score  overall_score                                              quote source                                          title  year  oscar_winner  oscar_nom\n",
         "0                        GuyCC 2003-12-17 00:00:00  0167260         1.0           0.89  Peter Jackson has done it.  He has created an ...   IMDB  The Lord of the Rings: The Return of the King  2003             1          1\n",
@@ -1779,18 +1779,17 @@
        ]
       }
      ],
-     "prompt_number": 48
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Using the `critics` dataframe, compute a pair of numerical X, Y arrays where:\n",
+      "Using different review dataframes, we will now compute a pair of numerical X, Y, Z arrays where:\n",
       "    \n",
-      " * X is a `(nreview, nwords)` array. Each row corresponds to a bag-of-words representation for a single review. This will be the *input* to your model.\n",
-      " * Y is a `nreview`-element 1/0 array, encoding whether a review is Fresh (1) or Rotten (0). This is the desired *output* from your model.\n",
-      " \n",
-      "Make sure to remove items with no review text"
+      " * X is a `(nreview, nwords)` array. Each row corresponds to a bag-of-words representation for a single review.\n",
+      " * Y is a `nreview`-element 1/0 array, encoding whether a movie wins an oscar (1) or didn't win (0).\n",
+      " * Z is a `nreview`-element 1/0 array, encoding whether a movie is nominated for an oscar (1) or not (0)."
      ]
     },
     {
@@ -1805,14 +1804,14 @@
       "\"\"\"\n",
       "Function\n",
       "--------\n",
-      "make_xy\n",
+      "make_xyz\n",
       "\n",
       "Build a bag-of-words training set for the review data\n",
       "\n",
       "Parameters\n",
       "-----------\n",
-      "critics : Pandas DataFrame\n",
-      "    The review data from above\n",
+      "df : Pandas DataFrame\n",
+      "    The review for a dataset\n",
       "    \n",
       "vectorizer : CountVectorizer object (optional)\n",
       "    A CountVectorizer object to use. If None,\n",
@@ -1825,36 +1824,66 @@
       "X : numpy array (dims: nreview, nwords)\n",
       "    Bag-of-words representation for each review.\n",
       "Y : numpy array (dims: nreview)\n",
-      "    1/0 array. 1 = fresh review, 0 = rotten review\n",
+      "    1/0 array. 1 = won an oscar, 0 = didn't win an oscar\n",
+      "Z : numpy array (dims: nreview)\n",
+      "    1/0 array. 1 = nominated, 0 = not nominated\n",
       "\n",
       "Examples\n",
       "--------\n",
-      "X, Y = make_xy(critics)\n",
+      "X, Y, Z = make_xyz(imdb_id)\n",
       "\"\"\"\n",
-      "def make_xy(critics, vectorizer=None):\n",
-      "    #Your code here    \n",
+      "def make_xyz(df, vectorizer=None): \n",
       "    if vectorizer is None:\n",
       "        vectorizer = CountVectorizer()\n",
-      "    X = vectorizer.fit_transform(critics.quote)\n",
+      "    X = vectorizer.fit_transform(df.quote)\n",
       "    X = X.tocsc()  # some versions of sklearn return COO format\n",
-      "    Y = (critics.fresh == 'fresh').values.astype(np.int)\n",
-      "    return X, Y"
+      "    gc.collect()\n",
+      "    return X, df['oscar_winner'].astype(np.int), df['oscar_nom'].astype(np.int)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Because the dataframe for imdb is so large, though, we cannot in reality create a vectorizer based on this because it would not be able to fit in memory.  So here we will take a random sample of the quotes for each movie."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "X, Y = make_xy(critics)"
+      "X, Y, Z = make_xyz(imdb_df)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 13
+     "outputs": [
+      {
+       "ename": "MemoryError",
+       "evalue": "",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-26-d6ffbadbfc71>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mZ\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmake_xyz\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimdb_df\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;32m<ipython-input-24-30c03b0212ac>\u001b[0m in \u001b[0;36mmake_xyz\u001b[1;34m(df, vectorizer)\u001b[0m\n\u001b[0;32m     38\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mvectorizer\u001b[0m \u001b[1;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m         \u001b[0mvectorizer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCountVectorizer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 40\u001b[1;33m     \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvectorizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mquote\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     41\u001b[0m     \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtocsc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# some versions of sklearn return COO format\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m     \u001b[0mgc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcollect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32mC:\\Anaconda\\lib\\site-packages\\sklearn\\feature_extraction\\text.pyc\u001b[0m in \u001b[0;36mfit_transform\u001b[1;34m(self, raw_documents, y)\u001b[0m\n\u001b[0;32m    778\u001b[0m         \u001b[0mmax_features\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax_features\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    779\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 780\u001b[1;33m         \u001b[0mvocabulary\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_count_vocab\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mraw_documents\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfixed_vocabulary\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    781\u001b[0m         \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtocsc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    782\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32mC:\\Anaconda\\lib\\site-packages\\sklearn\\feature_extraction\\text.pyc\u001b[0m in \u001b[0;36m_count_vocab\u001b[1;34m(self, raw_documents, fixed_vocab)\u001b[0m\n\u001b[0;32m    715\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mfeature\u001b[0m \u001b[1;32min\u001b[0m \u001b[0manalyze\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    716\u001b[0m                 \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 717\u001b[1;33m                     \u001b[0mj_indices\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvocabulary\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfeature\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    718\u001b[0m                 \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    719\u001b[0m                     \u001b[1;31m# Ignore out-of-vocabulary items for fixed_vocab=True\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mMemoryError\u001b[0m: "
+       ]
+      }
+     ],
+     "prompt_number": 26
     },
     {
      "cell_type": "markdown",
