Splits data by year

--- a/process_book.ipynb
+++ b/process_book.ipynb
@@ -40,6 +40,7 @@
       "import gc\n",
       "import json, re\n",
       "import unicodedata\n",
+      "import random\n",
       "from pattern import web\n",
       "from HTMLParser import HTMLParser\n",
       "import requests\n",
@@ -108,7 +109,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
@@ -345,7 +346,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -574,7 +575,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# #Reads in all data\n",
+      "# Saves all data\n",
       "# alldata=get_top_movies_by_year(2003,200)\n",
       "# for yr in range(2004,2013):\n",
       "#     num_movies=200\n",
@@ -592,7 +593,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -697,23 +698,20 @@
         "2005 nominee performance: 0.776470588235\n",
         "2005 winner performance: 0.666666666667\n",
         "\n",
-        "2006 nominee performance: 0.786516853933\n",
+        "2006 nominee performance: 0.786516853933"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "2006 winner performance: 0.833333333333\n",
         "\n",
-        "2003 nominee performance: 0.813953488372"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
+        "2003 nominee performance: 0.813953488372\n",
         "2003 winner performance: 0.875\n",
         "\n",
-        "2004 nominee performance: 0.806818181818\n",
-        "2004 winner performance: 0.875\n",
-        "\n",
-        "2007 nominee performance: 0.797752808989"
+        "2004 nominee performance: 0.806818181818"
        ]
       },
       {
@@ -721,9 +719,19 @@
        "stream": "stdout",
        "text": [
         "\n",
+        "2004 winner performance: 0.875\n",
+        "\n",
+        "2007 nominee performance: 0.797752808989\n",
         "2007 winner performance: 0.791666666667\n",
         "\n",
-        "2008 nominee performance: 0.747126436782\n",
+        "2008 nominee performance: 0.747126436782"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "2008 winner performance: 0.791666666667\n",
         "\n",
         "2010 nominee performance: 0.760416666667"
@@ -757,7 +765,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -855,14 +863,14 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 10,
        "text": [
         "  critic date id norm_score overall_score quote source title year\n",
         "0                                                                "
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -1258,7 +1266,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
@@ -1391,7 +1399,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 31,
+       "prompt_number": 26,
        "text": [
         "   rank  year                                        movie_title   imdbid   rtid studio  total_gross  num_theaters_total  opening_revenue  num_theaters_opening date_open date_close  oscar_winner  oscar_nom\n",
         "0     1  2003      The Lord of the Rings: The Return of the King  0167260    NaN     NL    377027325                3703         72629713                  3703    17-Dec      3-Jun             1          1\n",
@@ -1402,7 +1410,7 @@
        ]
       }
      ],
-     "prompt_number": 31
+     "prompt_number": 26
     },
     {
      "cell_type": "markdown",
@@ -1893,59 +1901,6 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# now it's time to add the data\n",
-      "\"\"\"\n",
-      "Function\n",
-      "--------\n",
-      "add_oscar_data:\n",
-      "    Adds data for being an oscar winner or nominee in place in the passed dataframe\n",
-      "\n",
-      "Parameters\n",
-      "----------\n",
-      "    df: Dataframe\n",
-      "    award_name: Name of the oscar award\n",
-      "        If None, then creates general columns for winning any or being nominated in any\n",
-      "\"\"\"\n",
-      "\n",
-      "movie_awards = [u'Best Documentary, Features',u'Best Writing, Screenplay Written Directly for the Screen',\n",
-      "                u'Best Foreign Language Film',u'Best Short Film, Live Action',u'Best Music, Original Song',\n",
-      "                u'Best Music, Original Score',u'Best Art Direction-Set Decoration',u'Best Costume Design',\n",
-      "                u'Best Short Film, Animated',u'Best Makeup',u'Best Film Editing',u'Best Animated Feature',\n",
-      "                u'Best Writing, Screenplay Based on Material from Another Medium',u'Best Sound Editing',\n",
-      "                u'Best Cinematography',u'Best Documentary, Short Subjects',u'Best Sound',u'Best Director',\n",
-      "                u'Best Picture',u'Best Visual Effects']\n",
-      "\n",
-      "def add_oscar_data(df,award_name=None):\n",
-      "    awards = movie_awards\n",
-      "    if award_name:\n",
-      "        awards = [award_name]\n",
-      "        win = award_name.replace(' ','_') + '_winner'\n",
-      "        nom = award_name.replace(' ','_') + '_nom'\n",
-      "    else:\n",
-      "        win = 'oscar_winner'\n",
-      "        nom = 'oscar_nom'\n",
-      "    df[win] = 0\n",
-      "    df[nom] = 0\n",
-      "    for year in oscars:\n",
-      "        for award in movie_awards:\n",
-      "            try:\n",
-      "                df[win][df.id == oscars[year][award]['winner'][1]] = 1\n",
-      "                df[nom][df.id == oscars[year][award]['winner'][1]] = 1\n",
-      "                for n in oscars[year][award]['nominees']:\n",
-      "                    df[nom][df.id == n[1]] = 1\n",
-      "            # skip awards that don't exist for a year\n",
-      "            except:\n",
-      "                pass"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 8
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
       "add_oscar_data(imdb_df)\n",
       "imdb_df.head()"
      ],
@@ -2136,14 +2091,6 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
      "input": [
       "X, Y, Z = make_xyz(imdb_df)"
      ],
@@ -2165,6 +2112,75 @@
       }
      ],
      "prompt_number": 26
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<h2>Isolating a Training and Validation Set</h2>"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# randomly selects test years and train years\n",
+      "yrs = range(2003,2013)\n",
+      "test_yrs = random.sample(yrs, 5)\n",
+      "train_yrs = list(set(yrs)-set(test_yrs))\n",
+      "print 'Test years: ' + str(test_yrs)\n",
+      "print 'Train years: ' + str(train_yrs)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Test years: [2006, 2005, 2012, 2004, 2008]\n",
+        "Train years: [2009, 2010, 2003, 2011, 2007]\n"
+       ]
+      }
+     ],
+     "prompt_number": 27
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# a function that helps to isolate years within either the test or train datasets\n",
+      "def yr_check(df,yrs):\n",
+      "    years = df.year\n",
+      "    result = []\n",
+      "    for year in years:\n",
+      "        check_bool = False\n",
+      "        for list_yr in yrs:\n",
+      "            if (int(list_yr) == year):\n",
+      "                check_bool = True\n",
+      "        result.append(check_bool)\n",
+      "    return result\n",
+      "\n",
+      "# creates new dataframes organized by test and train\n",
+      "bomj_testdf = bomj_df[yr_check(bomj_df,test_yrs)]\n",
+      "bomj_traindf = bomj_df[yr_check(bomj_df,train_yrs)]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "2008\n",
+        "2012\n",
+        "2004\n",
+        "2005\n",
+        "2006\n"
+       ]
+      }
+     ],
+     "prompt_number": 53
     },
     {
      "cell_type": "markdown",
