--- a/process_book.ipynb
+++ b/process_book.ipynb
@@ -109,7 +109,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -883,18 +883,111 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "# write the functions to scrape the data"
+      "# write the functions to scrape the data\n",
+      "\n",
+      "'''\n",
+      "Get Individual Review From Rotten Tomatoes\n",
+      "\n",
+      "'''\n",
+      "\n",
+      "def get_rtomatoes_movie_reviews(imdb):\n",
+      "\t#api_key = 't97y5fkhfbfu9wjhse7v8ayy'\n",
+      "\t#api_key = '8kr5nqyrshjyp4y69w8rzzgu'\n",
+      "\tapi_key = 'sdat77wpkdnuyvb9bqhz2y5v'\n",
+      "\tif(len(imdb)<7):\n",
+      "\t\textra = 7 - len(imdb)\n",
+      "\t\tprefix = \"\"\n",
+      "\t\tfor i in range(0, extra):\n",
+      "\t\t\tprefix = prefix + '0'\n",
+      "\t\t\timdb = prefix + imdb\n",
+      "\n",
+      "\turl = 'http://api.rottentomatoes.com/api/public/v1.0/movie_alias.json' \n",
+      "\toptions = {'type': 'imdb','id': imdb, 'apikey': api_key}\n",
+      "\trotIds = requests.get(url, params=options).text\n",
+      "\trotIds = json.loads(rotIds)\n",
+      "\n",
+      "\tif('\"error\":\"Could not find a movie with the specified id\"' in rotIds):\n",
+      "\t\treturn None\n",
+      "\tif('id' not in rotIds):\n",
+      "\t\treturn None\n",
+      "\n",
+      "\ttitle = rotIds['title']\n",
+      "\tyear = rotIds['year']\n",
+      "\toverall_score = rotIds['ratings']['critics_score']\n",
+      "\trotId = rotIds['id']\n",
+      "\t\n",
+      "\turl2 = 'http://api.rottentomatoes.com/api/public/v1.0/movies/%s/reviews.json' % rotId\n",
+      "\toptions2 = {'review_type': 'top_critic', 'page_limit': 50, 'page': 1, 'apikey': api_key}\n",
+      "\tdata = requests.get(url2, params=options2).text\n",
+      "\tdata = json.loads(data)  # load a json string into a collection of lists and dicts\n",
+      "\tif('total' not in data or 'reviews' not in data):\n",
+      "\t\treturn None\n",
+      "\tif str(data['total']) == '0':\n",
+      "\t\treturn None\n",
+      "\n",
+      "\tids = []\n",
+      "\ttitles = []\n",
+      "\tyears = []\n",
+      "\toverall_scores = []\n",
+      "\t\n",
+      "\trevs = data['reviews'] \n",
+      "\tcritics = []\n",
+      "\tquotes = []\n",
+      "\tpubs = []\n",
+      "\tfreshness = []\n",
+      "\tdates = []\n",
+      "\n",
+      "\tfor each in revs:\n",
+      "\t\tids.append(imdb)\n",
+      "\t\ttitles.append(title)\n",
+      "\t\tyears.append(year)\n",
+      "\t\toverall_scores.append(float(overall_score)/100.0)\n",
+      "\n",
+      "\t\tcritics.append(each['critic'])\n",
+      "\t\tquotes.append(each['quote'])\n",
+      "\t\tpubs.append(each['publication'])\n",
+      "\t\tif(each['freshness'] == 'fresh'):\n",
+      "\t\t\tfreshness.append(1)\n",
+      "\t\telse:\n",
+      "\t\t\tfreshness.append(0)\n",
+      "\t\tdates.append(each['date']) \n",
+      "\t\n",
+      "\td = {'critic' : critics, 'norm_score' : freshness, 'quote' : quotes, 'id' : ids, 'title' : titles, 'source' : pubs, 'overall_score' : overall_scores, 'date' : dates, 'year': years} \n",
+      "\treturn pd.DataFrame(d)\n",
+      "\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 33
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# actually call the functions and save in a file"
+      "# actually call the functions and save in a file\n",
+      "def get_all_rtomatoes_movies(movieList):\n",
+      "\tall_imdbs = alldata['imdbid']\n",
+      "\timdbs = []\n",
+      "\tfor each in all_imdbs:\n",
+      "\t\tif str(each) != 'None':\n",
+      "\t\t\timdbs.append(each)\n",
+      "\t#print imdbs\n",
+      "\t#for each in imdbs:\n",
+      "\n",
+      "\tnewDF = pd.DataFrame()\n",
+      "\tfor each in imdbs:\n",
+      "\t\tindividualDF = get_rtomatoes_movie_reviews(each)\n",
+      "\t\tif(individualDF):\n",
+      "\t\t\tnewDF = newDF.append(individualDF, ignore_index=True)\n",
+      "\n",
+      "\n",
+      "\tfilename='./data/rotten_tomatoes_data.csv'\n",
+      "\tnewDF.to_csv(filename, index=False)\n",
+      "\treturn newDF\n",
+      "   \n",
+      "#alldata = pd.read_csv('./revised_id_data.csv')     \n",
+      "#rot_tom_data = get_all_rtomatoes_movies(alldata)\t\n"
      ],
      "language": "python",
      "metadata": {},
