filtered data for imdb by 10

--- a/process_book.ipynb
+++ b/process_book.ipynb
@@ -365,7 +365,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -402,7 +402,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -421,7 +421,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -1258,7 +1258,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -1882,70 +1882,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "imdb_df['id'] = imdb_df['id'].map(lambda id: str(id).zfill(7))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 7
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# now it's time to add the data\n",
-      "\"\"\"\n",
-      "Function\n",
-      "--------\n",
-      "add_oscar_data:\n",
-      "    Adds data for being an oscar winner or nominee in place in the passed dataframe\n",
-      "\n",
-      "Parameters\n",
-      "----------\n",
-      "    df: Dataframe\n",
-      "    award_name: Name of the oscar award\n",
-      "        If None, then creates general columns for winning any or being nominated in any\n",
-      "\"\"\"\n",
-      "\n",
-      "movie_awards = [u'Best Documentary, Features',u'Best Writing, Screenplay Written Directly for the Screen',\n",
-      "                u'Best Foreign Language Film',u'Best Short Film, Live Action',u'Best Music, Original Song',\n",
-      "                u'Best Music, Original Score',u'Best Art Direction-Set Decoration',u'Best Costume Design',\n",
-      "                u'Best Short Film, Animated',u'Best Makeup',u'Best Film Editing',u'Best Animated Feature',\n",
-      "                u'Best Writing, Screenplay Based on Material from Another Medium',u'Best Sound Editing',\n",
-      "                u'Best Cinematography',u'Best Documentary, Short Subjects',u'Best Sound',u'Best Director',\n",
-      "                u'Best Picture',u'Best Visual Effects']\n",
-      "\n",
-      "def add_oscar_data(df,award_name=None):\n",
-      "    awards = movie_awards\n",
-      "    if award_name:\n",
-      "        awards = [award_name]\n",
-      "        win = award_name.replace(' ','_') + '_winner'\n",
-      "        nom = award_name.replace(' ','_') + '_nom'\n",
-      "    else:\n",
-      "        win = 'oscar_winner'\n",
-      "        nom = 'oscar_nom'\n",
-      "    df[win] = 0\n",
-      "    df[nom] = 0\n",
-      "    for year in oscars:\n",
-      "        for award in movie_awards:\n",
-      "            try:\n",
-      "                df[win][df.id == oscars[year][award]['winner'][1]] = 1\n",
-      "                df[nom][df.id == oscars[year][award]['winner'][1]] = 1\n",
-      "                for n in oscars[year][award]['nominees']:\n",
-      "                    df[nom][df.id == n[1]] = 1\n",
-      "            # skip awards that don't exist for a year\n",
-      "            except:\n",
-      "                pass"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 8
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+      "imdb_df['id'] = imdb_df['id'].map(lambda id: str(id).zfill(7))\n",
       "add_oscar_data(imdb_df)\n",
       "imdb_df.head()"
      ],
@@ -2124,7 +2061,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 44
     },
     {
      "cell_type": "markdown",
@@ -2136,10 +2073,31 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "grp_imdb = imdb_df.groupby('id')"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from random import sample\n",
+      "\n",
+      "imdb_df = pd.DataFrame()\n",
+      "\n",
+      "for name,group in grp_imdb:\n",
+      "    rows = sample(group.index,len(group.index) / 10)\n",
+      "    group = group.ix[rows]\n",
+      "    imdb_df = imdb_df.append(group)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 38
     },
     {
      "cell_type": "code",
@@ -2149,22 +2107,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "MemoryError",
-       "evalue": "",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-26-d6ffbadbfc71>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mZ\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmake_xyz\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimdb_df\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;32m<ipython-input-24-30c03b0212ac>\u001b[0m in \u001b[0;36mmake_xyz\u001b[1;34m(df, vectorizer)\u001b[0m\n\u001b[0;32m     38\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mvectorizer\u001b[0m \u001b[1;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m         \u001b[0mvectorizer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCountVectorizer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 40\u001b[1;33m     \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvectorizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mquote\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     41\u001b[0m     \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtocsc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# some versions of sklearn return COO format\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m     \u001b[0mgc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcollect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32mC:\\Anaconda\\lib\\site-packages\\sklearn\\feature_extraction\\text.pyc\u001b[0m in \u001b[0;36mfit_transform\u001b[1;34m(self, raw_documents, y)\u001b[0m\n\u001b[0;32m    778\u001b[0m         \u001b[0mmax_features\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax_features\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    779\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 780\u001b[1;33m         \u001b[0mvocabulary\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_count_vocab\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mraw_documents\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfixed_vocabulary\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    781\u001b[0m         \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtocsc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    782\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32mC:\\Anaconda\\lib\\site-packages\\sklearn\\feature_extraction\\text.pyc\u001b[0m in \u001b[0;36m_count_vocab\u001b[1;34m(self, raw_documents, fixed_vocab)\u001b[0m\n\u001b[0;32m    715\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mfeature\u001b[0m \u001b[1;32min\u001b[0m \u001b[0manalyze\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    716\u001b[0m                 \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 717\u001b[1;33m                     \u001b[0mj_indices\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvocabulary\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfeature\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    718\u001b[0m                 \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    719\u001b[0m                     \u001b[1;31m# Ignore out-of-vocabulary items for fixed_vocab=True\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mMemoryError\u001b[0m: "
-       ]
-      }
-     ],
-     "prompt_number": 26
+     "outputs": [],
+     "prompt_number": 45
     },
     {
      "cell_type": "markdown",
