added some comments

--- a/process_book.ipynb
+++ b/process_book.ipynb
@@ -2185,21 +2185,14 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "grp_imdb = imdb_df.groupby('id')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 14
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
       "from random import sample\n",
       "\n",
+      "# group imdb_df by movie\n",
+      "grp_imdb = imdb_df.groupby('id')\n",
+      "# reset imdb_df for appending new info\n",
       "imdb_df = pd.DataFrame()\n",
       "\n",
+      "# iterate through groups, randomly remove reviews, append to imdb_df\n",
       "for name,group in grp_imdb:\n",
       "    rows = sample(group.index,len(group.index) / 10)\n",
       "    group = group.ix[rows]\n",
@@ -2214,6 +2207,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# finally construct X,Y,Z\n",
       "X, Y, Z = make_xyz(imdb_df)"
      ],
      "language": "python",
